--- a/src/Component/HomepageComponent/home.css
+++ b/src/Component/HomepageComponent/home.css
@@ -10,7 +10,7 @@
     background-image: linear-gradient(180deg, #691908 , #050202be );
 }
 
- .card{
+ .homepage-card{
      width: 100%;
      height: 60vh;
      border-radius: 20px;
@@ -53,10 +53,10 @@
     transition: 0.5s;
  }
  
- .card:hover  .card-left-btn  {
+ .homepage-card:hover  .card-left-btn  {
      left: 0;
  }
- .card:hover  .card-right-btn  {
+ .homepage-card:hover  .card-right-btn  {
      right: 0;
  }
 
@@ -122,10 +122,10 @@
   
 
   
-  h1, h1 a {
+  .glass-panel h1 {
     min-height: 120px;
     width: 90%;
-    /* max-width: 700px; */
+    max-width: 700px;
     vertical-align: middle;
     text-align: center;
     margin: 0 auto;
@@ -135,7 +135,7 @@
     color: rgba(255,255,255,0.8);
   }
   
-  p {
+  .glass-panel p {
     width: 60%;
     margin: 0 auto;
     padding-bottom: 32px;
@@ -162,9 +162,9 @@
 
 
 #homepage-referal_image{
-    width: 85%;
-    position: relative;
-    top: 19%;
+    margin: auto;
+    width: 22vw;
+    height: 22vh;
 }
 #homepage-referal_section2{
     font-family: oswald;
