--- a/src/Component/HomepageComponent/home.css
+++ b/src/Component/HomepageComponent/home.css
@@ -26,7 +26,7 @@
      border-radius: 15px;
  }
    
- .card-body{
+ .homepage-card-body{
      width: 100%;
      height: 70vh;
      top: 0px;
@@ -60,7 +60,7 @@
      right: 0;
  }
 
- .card:hover .card-body{
+ .homepage-card:hover .homepage-card-body{
      backdrop-filter: blur(2px);
  }
 
@@ -97,10 +97,11 @@
     margin: 40px auto;
     background-color: rgba(255,255,255,0.06);
     border: 1px solid rgba(255,255,255,0.1);
-    width: 100%;
+    max-width: 65%;
     border-radius: 15px;
     padding: 32px;
     backdrop-filter: blur(10px);
+   
   }
   
   
@@ -114,10 +115,7 @@
     background-size: cover;
     text-align: center;
     font-family: "Lucida Handwriting";
-  }
-  
-  .glass-panel {  
-    max-width: 65%;
+    overflow: hidden;
   }
   
 
